Clase 2: header con links

--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
   <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <ul>
+        <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li>
+        <li><a href="https://www.google.com.ec/imghp?hl=en&ogbl">Images</a></li>
+        <li><a href="">Icon</a></li>
+        <li><a href="">Photo</a></li>
+      </ul>
+    </nav>
+  </header>
 </body>
 </html>
