Clase 3: header styles

--- a/index.html
+++ b/index.html
@@ -13,11 +13,21 @@
 <body>
   <header>
     <nav>
-      <ul>
-        <li><a href="https://mail.google.com/mail/&ogbl">Gmail</a></li>
-        <li><a href="https://www.google.com.ec/imghp?hl=en&ogbl">Images</a></li>
-        <li><a href="">Icon</a></li>
-        <li><a href="">Photo</a></li>
+      <ul class="nav-right-section">
+        <li>
+          <a href="https://mail.google.com/mail/&ogbl">Gmail</a>
+        </li>
+        <li>
+          <a href="https://www.google.com.ec/imghp?hl=en&ogbl">Images</a>
+        </li>
+        <li class="menu-icon">
+          <a href=""></a>
+        </li>
+        <li>
+          <a href="">
+            <img src="https://lh3.googleusercontent.com/ogw/ADea4I7l2eOs-QzODZQYCy7F3rz7k3QgioxiTVWUTj8lxw=s32-c-mo" alt="User photo">
+          </a>
+        </li>
       </ul>
     </nav>
   </header>
